# OMPTestCase

./: .gitignore  CMakeLists.txt  README.md  adaptor.xml  main.cc  permissions.h
clientApp/: clientApp.pro  main.cc
com/system/permissions/: main.cc  permissions_adaptor.xml  permissions_client.h  permissions_service.h
com/system/time/: main.cc  time_adaptor.xml  time_client.h  time_service.h
systemPermission/: main.cc  systemPermissions.cc  systemPermissions.pro
systemPermissions/: systemPermissions.cc  systemPermissions.h
systemTime/: main.cc  systemTime.cc  systemTime.h  systemTime.pro
